corrected href to about me

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div id="navbar">
             <a class="box box1" href="index.html">Home</a>
-            <a class="box box1" href="About Me">About Me</a>
+            <a class="box box1" href="aboutme.html">About Me</a>
             <a class="box box2" href="assignment1.html">Assignment1</a>
             <a class="box box3" href="assignment2.html">Assigment2</a>
 
