--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="main.css">
-    <title>Document</title>
+    <title>Zainab's blog</title>
 </head>
 <body>
     <div class="container">
