--- a/aboutme.html
+++ b/aboutme.html
@@ -24,7 +24,7 @@
     <div class="wrapper">  
 
          <div class="aboutmeimage">
-            <img class="aboutmeimage" src=images/aboutme.png alt="aboutmeimage">
+            <img class="aboutmeimage" src="images/aboutme.png" alt="aboutmeimage">
         </div>
 
         <div class="content">
@@ -37,7 +37,7 @@
             </p>
 
             <div class="codenationimage">       
-                <img class="codenationimage" src=images/codenationimage.jpg alt="codenationimage">
+                <img class="codenationimage" src="images/codenationimage.jpg" alt="codenationimage">
                 
 
         </div>
