--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="wrapper">  
 
         <div class="headerimage">
-            <img class="headerimage" src=images/blog.png alt="headerimage">
+            <img class="headerimage" src="images/blog.png" alt="headerimage">
         </div>
 
         <div class="content">
@@ -151,7 +151,7 @@
                 this means the Individuals are able to request data which is not being used for processing. Records can remain in place but not used.
             </p>
 
-            <img class="gif" src=https://media.giphy.com/media/PxSFAnuubLkSA/giphy.gif alt="gif">
+            <img class="gif" src="https://media.giphy.com/media/PxSFAnuubLkSA/giphy.gif" alt="gif">
 
             <p>
                 <a href="#navbar">back to top</a>
@@ -189,7 +189,7 @@
             <h3>
                 2.5 I have successfully reviewed outcomes and matched them to the desired results. 
             </h3>
-            <img src=https://media.giphy.com/media/z4mhcGKzg1fb2/giphy.gif alt="putcometwogif">
+            <img src="https://media.giphy.com/media/z4mhcGKzg1fb2/giphy.gif" alt="putcometwogif">
 
             <a href="#navbar">back to top</a>
 
