--- a/index.html
+++ b/index.html
@@ -276,13 +276,17 @@
 
             <p>
             Certain file types work better for creating websites, a few of them are CSS, JPEG, HTML, Microsoft Word, Photoshop files, 
-            Java Script, and PDF.
+            JavaScript, and PDF.
             </p>
 
             <img src="https://media.giphy.com/media/fCVd3k7u9qoRa/giphy.gif" alt="outcomethreegif">
             <p>
                     <a href="#navbar">back to top</a>
             </p>
+            <h2>Screenshot - Chrome</h2>
+            <img src="chrome.png" alt="chrome">
+            <h2>Screenshot - Firefox</h2>
+            <img src="firefox.png" alt="firefox">
             </div>
         </div>
 
